# pytex

./: .gitignore  AGENTS.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  mission.md  pyproject.toml  specifications.md
.github/workflows/: ci.yml
benchmarks/diffraction/: README.md  external_baseline_benchmark_manifest.json  external_baseline_workflow_result_manifest.json  foundation_benchmark_manifest.json
benchmarks/ebsd/: README.md  foundation_benchmark_manifest.json  multiphase_graph_benchmark_manifest.json
benchmarks/mtex_parity/: README.md
benchmarks/plotting/: plotting_structural_validation_benchmark_manifest.json  visual_regression_benchmark_manifest.json
benchmarks/structure_import/: README.md  foundation_benchmark_manifest.json  foundation_workflow_result_manifest.json  phase_fixture_audit_summary.json
benchmarks/texture/: README.md  labotex_open_pole_figure_benchmark_manifest.json  xrdml_import_benchmark_manifest.json
benchmarks/transformation/: README.md  variant_prediction_benchmark_manifest.json
benchmarks/validation/: README.md  diffraction_validation_manifest.json  labotex_open_pole_figure_validation_manifest.json  phase_transformation_validation_manifest.json  plotting_validation_manifest.json  structure_import_validation_manifest.json  texture_xrdml_validation_manifest.json
docs/: README.md
docs/architecture/: canonical_data_model.md  diffraction_foundation.md  ebsd_foundation.md  overview.md  (+4 more)
docs/site/: README.md  (+2 more)
fixtures/: README.md
references/: AGENTS.md  feature_opportunities.md  formulation_summary.md  reference_index.md
schemas/: README.md  benchmark_manifest.schema.json  ebsd_import_manifest.schema.json  experiment_manifest.schema.json  transformation_manifest.schema.json  validation_manifest.schema.json  workflow_result_manifest.schema.json
scripts/: __init__.py  benchmark_miller_vectorized.py  check_repo_integrity.py  generate_diffraction_external_baselines.py  generate_structure_import_fixture_audit.py  generate_tutorial_notebooks.py  generate_visual_regression_artifacts.py  regenerate_phase_fixture_catalog_hashes.py  run_open_labotex_validation.py
(+420 files in other folders)
